<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingStart="50dp"
    android:paddingEnd="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_your_medication"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/resume_dialog_description"/>

    <CheckBox
        android:id="@+id/continuous_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuous" />

    <EditText
        android:id="@+id/input_add_meds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/days"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/blue_background"
            android:layout_marginEnd="40dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/text_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RESUME"
            android:textColor="@color/blue_background"
            android:padding="10dp" />

    </LinearLayout>

</LinearLayout>