<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.homepage.view.HomeActivity">

    <TextView
        android:id="@+id/profile_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:text="@string/Profile"
        android:textColor="@color/black"
        android:padding="20dp"
        android:drawableStart="@drawable/person_ic"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/showMedFriends_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:text="@string/showMedFriends"
        android:textColor="@color/black"
        android:padding="20dp"
        android:drawableStart="@drawable/list_friends"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_txt" />

    <TextView
        android:id="@+id/sendMedFriend_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:text="@string/sendMedFriendRequest"
        android:textColor="@color/black"
        android:padding="20dp"
        android:drawableStart="@drawable/add_friend_ic"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showMedFriends_txt" />

    <TextView
        android:id="@+id/myMedFriendsRequests_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:text="@string/myMedFriendsRequests"
        android:textColor="@color/black"
        android:padding="20dp"
        android:drawableStart="@drawable/friends_requests"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendMedFriend_txt" />

    <TextView
        android:id="@+id/helpers_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/person_ic"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:text="@string/my_helpers"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myMedFriendsRequests_txt" />

    <TextView
        android:id="@+id/logout_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:padding="20dp"
        android:drawableStart="@drawable/logout_ic"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpers_txt" />


</androidx.constraintlayout.widget.ConstraintLayout>