<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">

    <TextView
        android:id="@+id/medTime_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/time"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/timeZone_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/timeZone"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/medTime_txt"
        app:layout_constraintTop_toTopOf="@+id/medTime_txt" />

    <androidx.cardview.widget.CardView
        android:id="@+id/med_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/medTime_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="5dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/active_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/med_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/blue_background"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_medication"/>

            <View
                android:id="@+id/vertical_line"
                android:layout_width="1dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toEndOf="@+id/med_img"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="10dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/medName_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/Drug"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/vertical_line"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/medDose_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doseNum"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/medName_txt"
                app:layout_constraintTop_toBottomOf="@+id/medName_txt" />

            <TextView
                android:id="@+id/medUnit_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/medUnit"
                app:layout_constraintBottom_toBottomOf="@+id/medDose_txt"
                app:layout_constraintStart_toEndOf="@+id/medDose_txt"
                app:layout_constraintTop_toTopOf="@+id/medDose_txt" />

            <TextView
                android:id="@+id/comma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/medUnit_txt"
                app:layout_constraintTop_toTopOf="@+id/medDose_txt"
                app:layout_constraintBottom_toBottomOf="@+id/medDose_txt"
                android:text=","/>

            <TextView
                android:id="@+id/take_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/left"
                app:layout_constraintBottom_toBottomOf="@+id/medDose_txt"
                app:layout_constraintStart_toEndOf="@+id/comma"
                app:layout_constraintTop_toTopOf="@+id/medDose_txt" />

            <TextView
                android:id="@+id/pillNum_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pillNum"
                app:layout_constraintBottom_toBottomOf="@+id/medDose_txt"
                app:layout_constraintStart_toEndOf="@+id/take_txt"
                app:layout_constraintTop_toTopOf="@+id/medDose_txt" />

            <TextView
                android:id="@+id/pill_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pill"
                app:layout_constraintBottom_toBottomOf="@+id/medDose_txt"
                app:layout_constraintStart_toEndOf="@+id/pillNum_txt"
                app:layout_constraintTop_toTopOf="@+id/medDose_txt" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>








