<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.med.medreminder.ui.homepage.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/actionNavigationHomeToEditNav"
            app:destination="@id/edit_nav"
            app:enterAnim="@anim/slide_up"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_down">

            <argument
                android:name="med_id"
                app:argType="long"
                android:defaultValue="0L" />

        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.med.medreminder.ui.homepage.view.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/actionNavigationDashboardToDisplayEditMedicationGraph"
            app:destination="@id/display_edit_medication_graph"
            app:enterAnim="@anim/slide_up"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_down">
            <argument
                android:name="id"
                app:argType="long"
                android:defaultValue="0L" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.med.medreminder.ui.homepage.view.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <include app:graph="@navigation/display_edit_medication_graph" />
    <include app:graph="@navigation/edit_nav" />
</navigation>